# web-chess

./: CLAUDE.md  README.md  codeviz_report_quiero_visualizar_todo_el_proyecto_c_mo_interactua_2025-07-03T20-11-07.md  index.html  style.css
backend/: Cargo.toml
backend/src/: main.rs  templates.rs
backend/static/: server.js  styleboard.css  styles.css
backend/templates/: base.html  board-content.html  board.html  form-registration-content.html  form-registration.html  form-tournaments-content.html  form-tournaments.html  index-content.html  index.html
