[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
anyhow = "1"
askama = "0.14.0"
bytes = "1.10.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = "4.5.40"
serde_json = "1.0.140"
lazy_static = "1.5.0"
